# magic-base

./: pyproject.toml
docs/: api-base.md
scripts/: prebuild  pypi  pypi.txt
src/magic_base/: __init__.py
src/magic_base/config/: base_config.py
src/magic_base/constants/: tables.py
src/magic_base/context/: application_context.py
src/magic_base/crypto/: base_cert.py  base_crypto.py
src/magic_base/data_access/config/: base_database_config.py
src/magic_base/data_access/manager/: base_database_manager.py
src/magic_base/data_access/model/: base_entity.py  base_model.py
src/magic_base/data_access/repository/: base_repository.py  base_repository_core_mixin.py  base_repository_cud_mixin.py  base_repository_query_mixin.py  base_sqlalchemy_repository.py
src/magic_base/data_access/service/: base_service.py  base_service_core_mixin.py  base_service_cud_mixin.py  base_service_query_mixin.py
src/magic_base/data_access/util/: __init__.py  base_data_command.py  base_db_command.py  base_db_table_util.py  base_db_util.py  base_type_converter.py
src/magic_base/detector/: base_detector.py  base_hardware_define.py  base_hardware_result.py
src/magic_base/exceptions/: base_exceptions.py
src/magic_base/platform/: base_platform_adapter.py
src/magic_base/types/: base_types.py
src/magic_base/util/: db_util.py
src/magic_base/utils/: __init__.py  base_csv_validator.py
